--- a/src/components/header/categories/Categories.module.css
+++ b/src/components/header/categories/Categories.module.css
@@ -1,3 +1,10 @@
 .root {
   
 }
+
+.wrap {
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px;
+  margin-top: 18px;
+  padding-right: 40px;
+}
