Added logic with mobx and made styles for Categories

--- a/src/components/header/categories/Categories.module.css
+++ b/src/components/header/categories/Categories.module.css
@@ -5,6 +5,5 @@
 .wrap {
   display: grid;
   grid-template-columns: 100px 100px 100px 100px;
-  margin-top: 18px;
-  padding-right: 40px;
+  grid-template-rows: 60px;
 }
