--- a/src/components/content/forecast/Forecast.module.css
+++ b/src/components/content/forecast/Forecast.module.css
@@ -5,4 +5,6 @@
   height: 90%;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
