--- a/src/components/content/forecast/details/Details.module.css
+++ b/src/components/content/forecast/details/Details.module.css
@@ -2,10 +2,12 @@
   
 }
 .wrap {
+  padding: 5px;
+  background-color: brown;
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   flex-direction: row;
 }
